[package]
name = "tokio-linux-aio"
version = "0.1.2"
authors = ["Hans-Martin Will <hwill@acm.org>"]
description = "Tokio bindings for Linux kernel AIO"
repository="https://github.com/hmwill/tokio-linux-aio"
license = "MIT"

[dependencies]
rand = "0.4"
tokio = "0.1"
futures = "0.1"
futures-cpupool = "0.1"
mio = "0.6.13"
aio-bindings = { path = "aio-bindings", version = "0.1.1" }
libc = "0.2"

memmap = "0.6.2"

[workspace]
