[package]
name = "tokio-linux-aio"
version = "0.1.11"
authors = ["Hans-Martin Will <hwill@acm.org>"]
description = "Tokio bindings for Linux kernel AIO"
documentation = "https://docs.rs/tokio-linux-aio/"
repository= "https://github.com/hmwill/tokio-linux-aio"
license = "MIT"
readme = "README.md"
categories = ["api-bindings", "asynchronous", "external-ffi-bindings", "filesystem", "os::unix-apis"]
keywords = ["async", "non-blocking", "futures", "linux", "aio"]

[badges]
travis-ci = { repository = "hmwill/tokio-linux-aio" }

[dependencies]
rand = "0.6"
tokio = "0.2"
futures = "0.1"
futures-cpupool = "0.1"
mio = "0.6.13"
aio-bindings = { path = "aio-bindings", version = "0.1.2" }
libc = "0.2"
memmap = "0.7.0"

[workspace]
